# alpaka3

./: .clineignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  clean_provider_demo.cpp  debug_cpu_serial.cpp  debug_tensor.cpp  minimal_integration_test.cpp  simple_provider_test.cpp
benchmark/: CMakeLists.txt
benchmark/HACCmk/src/: helper.hpp  main_alpaka.cpp  main_orig.cpp  misc.hpp
benchmark/alloc/: CMakeLists.txt
benchmark/alloc/src/: alloc_benchmark.cpp  alloc_helpers.hpp
benchmark/babelstream/: CMakeLists.txt
benchmark/babelstream/src/: babelStreamCommon.hpp  babelStreamMainTest.cpp
benchmark/tensor/BatchNormMicro/cpp/: BatchNormMicro.cpp  CMakeLists.txt
benchmark/tensor/Conv2DBenchmark/: README.md
benchmark/tensor/Conv2DBenchmark/cpp/: CMakeLists.txt  conv2d_bench.cpp
benchmark/tensor/Conv2DBenchmark/python/: pytorch_conv2d_benchmark.py
benchmark/tensor/PoolingMicro/cpp/: CMakeLists.txt  PoolingMicro.cpp
benchmark/tensor/inferenceBERT/: README.md
benchmark/tensor/inferenceBERT/cpp/: CMakeLists.txt  helperFunctions.hpp  inferenceBERT.cpp
benchmark/tensor/inferenceBERTMulti/cpp/: CMakeLists.txt  helperFunctions.hpp  inferenceBERTMulti.cpp
benchmark/tensor/inferenceLeNet/cpp/: CMakeLists.txt  inferenceLeNet.cpp
benchmark/tensor/inferenceResNet/cpp/: CMakeLists.txt  inferenceResNet.cpp
cmake/: CollectiveSupport.cmake  CudaSupport.cmake  RocmSupport.cmake  addExecutable.cmake  addLibrary.cmake  alpakaCommon.cmake  alpakaCompilePedantic.cmake  alpakaConfig.cmake.in  alpakaCuda.cmake  alpakaHip.cmake  alpakaOneApi.cmake  alpakaPrepareForAddSubdirectoryUsage.cmake  buildDependencies.cmake  common.cmake  finalize.cmake  riscv64-clang.toolchain.cmake  riscv64-gnu.toolchain.cmake  tuner.cmake
docs/: Doxyfile  Doxyfile_dev  alpaka_docs.yml  requirements.txt
docs/snippets/: 05_device.cpp  10_memory.cpp  15_kernel.cpp  20_simdKernel.cpp  CMakeLists.txt  cheatsheet.cpp
docs/snippets/cheatsheet/: CMakeLists.txt  cheatsheet.cpp
docs/snippets/dataStorage/: CMakeLists.txt  datastorage_interface.cpp  datastorage_pitch.cpp  datastorage_writeable_datasource.cpp  terms_extents.cpp
docs/snippets/example/: 000_elementWiseMultiplication.cpp  00_vector.cpp  020_device.cpp  02_execution.cpp  040_memory.cpp  041_memoryOperations.cpp  050_kernel.cpp  05_device.cpp  06_queue.cpp  070_views.cpp  080_multidim.cpp  090_kernelParallelism.cpp  10_memory.cpp  110_synchronization.cpp  120_sharedMemory.cpp  12_kernelIntro.cpp  130_algorithms.cpp  13_hierarchy.cpp  140_math.cpp  150_atomics.cpp  15_kernel.cpp  160_events.cpp  16_sharedMemory.cpp  170_random.cpp  180_memFence.cpp  190_warp.cpp  191_intrinsics.cpp  200_vendorInterop.cpp  20_simdKernel.cpp  210_miniProject.cpp  220_advancedMigration.cpp  230_kernelFn.cpp  28_chunkedFrames.cpp  30_random.cpp  31_monteCarloPi.cpp  CMakeLists.txt
docs/snippets/example/include/: docsTest.hpp
docs/snippets/fetchContent/: CMakeLists.txt  main.cpp
docs/snippets/idxMap/: CMakeLists.txt  plot_idx_map.cpp
docs/snippets/idxMap/include/: idx_map_data.hpp  plot_data.hpp
docs/snippets/terms/: CMakeLists.txt  datastorage_extents.cpp  frame_spec_kernel.cpp  thread_spec_kernel.cpp
example/: CMakeLists.txt
example/alpaka-ls/: CMakeLists.txt
example/alpaka-ls/src/: libls.cpp  ls.cpp
example/boundaryIter/: CMakeLists.txt
example/boundaryIter/src/: boundaryIter.cpp  common.hpp
example/grayScale/: CMakeLists.txt
example/grayScale/src/: grayScale.cpp
example/heatEquation2D/: CMakeLists.txt
example/heatEquation2D/src/: BoundaryKernel.hpp  StencilKernel.hpp  analyticalSolution.hpp  heatEquation2D.cpp
example/nBody/: CMakeLists.txt  README.md
example/nBody/src/: Kernels.hpp  common.hpp  helpers.hpp  nBody.cpp  particles.hpp  writepng.hpp
example/radixsort/: CMakeLists.txt
example/radixsort/src/: radixSort.cpp
example/randomInit/: CMakeLists.txt
example/randomInit/src/: randomInit.cpp  randomInitNormal.cpp  randomInitNormal.hpp
example/scan/: CMakeLists.txt  README.md
example/scan/src/: common.hpp  exclusive_scan.cpp  scan.cpp  scan.hpp  scan_executors.hpp  scan_improved.hpp  scan_main.hpp  scan_single_pass.cpp  scan_single_pass.hpp
example/stencilTransform/: CMakeLists.txt
example/stencilTransform/src/: stencilTransform.cpp
example/tensor/: CMakeLists.txt
example/tensor/collectiveBasic/: CMakeLists.txt
example/tensor/collectiveBasic/src/: collectiveBasic.cpp
example/tensor/collectiveDemo/: CMakeLists.txt  README.md
example/tensor/collectiveDemo/src/: tensorCollectiveDemo.cpp
example/tensor/conv2DGeneric/: CMakeLists.txt  conv2DGeneric.cpp
example/tensor/highlevel/: CMakeLists.txt  cnnHighLevel.cpp  conv2dHighLevel.cpp  gemmHighLevel.cpp  reluHighLevel.cpp
example/tensor/inferenceDemo/: CMakeLists.txt  inferenceDemo.cpp
example/tensor/inferenceLeNet/: CMakeLists.txt  inferenceLeNet.cpp
example/tensor/tensor2DExample/: CMakeLists.txt
example/tensor/tensor2DExample/src/: tensor1DWorking.cpp  tensor2DExample.cpp  tensor2DSimple.cpp  tensorLimitationTest.cpp  test2DFixed.cpp
example/tensor/tensorGemmExample/: CMakeLists.txt
example/tensor/tensorGemmExample/src/: tensorGemmExample.cpp
example/tensor/tensorOpIntegration/: CMakeLists.txt  tensorOpIntegration.cpp
example/tensor/trainingDemo/: CMakeLists.txt
example/tensor/trainingDemo/src/: main.cpp  trainingDemo.cpp
example/tutorial/: CMakeLists.txt
example/tutorial/src/: 00_enumerate.cpp  01_queue.cpp  03_memory.cpp  04_views.cpp  05_kernel.cpp  06_cudaLikeKernel.cpp  07_chunkedData.cpp  config.h
example/vectorAdd/: CMakeLists.txt
example/vectorAdd/src/: vectorAdd.cpp
example/vectorAdd/vectorAdd_Tuned/: CMakeLists.txt
example/vectorAdd/vectorAdd_Tuned/src/: vectorAdd_Tuned.cpp
example/vendorApi/: CMakeLists.txt
example/vendorApi/src/: alpakaFn.hpp  cudaFn.hpp  fn.hpp  main.cpp
headerCheck/: CMakeLists.txt
sanitizer/: lsan_suppressions.txt  ubsan_suppressions.txt
sanitizers/: README.md  (+2 more)
(+788 files in other folders)
